--- a/test1.html
+++ b/test1.html
@@ -2,6 +2,7 @@
 var a;
 alert(1);
 function gc() {
+    alert("in gc");
     try {
         var c = document.createElement("canvas");
         var gl = c.getContext("2d");
