--- a/test1.html
+++ b/test1.html
@@ -16,6 +16,7 @@ function gc() {
     }
 }
 var a = [1,{toString:function(){
+  alert("in toString");
  a[2] = {};
  for(var i=0;i<c.length;i++){
  c[i]=new Array(3);
