--- a/test1.html
+++ b/test1.html
@@ -35,6 +35,8 @@ var a = [1,{toString:function(){
  return "aaa";
 }}, b, 2]
 a.sort();
-alert(a);
-
+alert(a[0]);
+alert(a[1]);
+alert(a[2]);
+alert(a[3]);
 </script>
