--- a/test1.html
+++ b/test1.html
@@ -35,8 +35,12 @@ var a = [1,{toString:function(){
  return "aaa";
 }}, b, 2]
 a.sort();
+try{
 alert(a[0]);
 alert(a[1]);
-alert(a[2]);
+//alert(a[2]);
 alert(a[3]);
+}catch(e){
+alert(e);
+}
 </script>
