--- a/test1.html
+++ b/test1.html
@@ -17,7 +17,7 @@ function sleep(d){
 }
 
 var c = new Array(0x10000)
-var b = new Error();
+var b = new Array();
 var a = [1,{toString:function(){
  a[2] = {};
  b = null
