Update and rename index.html to a.html

--- a/a.html
+++ b/a.html
@@ -36,7 +36,7 @@ this.toString = function(){return '123'}
 }}, 2]
 a.sort();
 alert(a[0]);
-alert(a[1]);
+alert(a[1].a);
 alert(a[2]);
 //alert(a[3]);
 }catch(e){alert(e)}
