--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ function lala(){
             var gl = c.getContext("2d");
 
             for (var i = 0; i < 0x100; i++) {
-                var gggg = gl.createImageData(1, 0x100000)
-                var oooo = document.createElement('button')
+                var gggg = gl.createImageData(1, 0x10000)
+                //var oooo = document.createElement('button')
             }
         } catch (e) {
 
@@ -17,7 +17,7 @@ function lala(){
       for(var t = Date.now();Date.now() - t <= d;);
     }
 
-    //alert(111);
+    alert(111);
     document.body.offsetParent
 
         var c = document.createElement('canvas')
