--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ function lala(){
       for(var t = Date.now();Date.now() - t <= d;);
     }
 
-    alert(111);
+    alert(1121);
     document.body.offsetParent
 
         var c = document.createElement('canvas')
@@ -51,7 +51,7 @@ function lala(){
     //c[j].toString = function(){alert('ok'); return '666'}
      }
 
-     this.toString = null
+     this.toString = function(){return 222}
      return "aaa";
     }}, 1]
     sleep(1000)
