--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ function lala(){
       for(var t = Date.now();Date.now() - t <= d;);
     }
 
-    alert(1121);
-    document.body.offsetParent
+    alert(222);
+    //document.body.offsetParent
 
         var c = document.createElement('canvas')
         var gl = c.getContext('2d')
