--- a/pp.html
+++ b/pp.html
@@ -66,15 +66,18 @@ function lala(){
     } catch(e){alert(e)}
 
 try{
-var x = new Uint32Array(10)
-alert(x)
-postMessage('', '*', [x.buffer])
-alert(x)
+//var x = new Uint32Array(10)
+//alert(x)
+//postMessage('', '*', [x.buffer])
+//alert(x)
             var c = document.createElement("canvas");
             var gl = c.getContext("2d");
                 var y = gl.createImageData(1, 0x1000)
                 
 alert(y)
+alert(y.data)
+alert(y.data.length)
+alert(y.data.buffer)
 postMessage('', '*', [y.data.buffer])
 alert(y)
 }catch(e){alert(e)}
