--- a/pp.html
+++ b/pp.html
@@ -66,9 +66,9 @@ function lala(){
     } catch(e){alert(e)}
 
 try{
-//var x = new Uint32Array(10)
-//alert(x)
-//postMessage('', '*', [x.buffer])
+var x = new Uint32Array(10)
+alert(x)
+postMessage('', '*', [x.buffer])
 alert(123)
             var c = document.createElement("canvas");
             var gl = c.getContext("2d");
