--- a/test1.html
+++ b/test1.html
@@ -4,7 +4,7 @@ alert(11);
 
 var db = window.openDatabase('Mytestdb', '1.0', 'Test', 1024*1024);
 
-   
+   try{
      db.transaction(function (tx) {
         tx.executeSql('drop table if exists a;',[],function(tx,result){alert(result);},function(tx,err){alert("0"+err);});
         tx.executeSql('create virtual table a using fts3(b);',[],function(tx,result){alert(result);},function(tx,err){alert("1"+err);});
@@ -12,6 +12,9 @@ var db = window.openDatabase('Mytestdb', '1.0', 'Test', 1024*1024);
         tx.executeSql('select offsets(b) from a;',[],function(tx,result){alert(result);},function(tx,err){alert("3"+err);});
 		
     });
+   }catch(e){
+   alert(e);	   
+   }
     alert("end");
 
 /*
