--- a/sort.html
+++ b/sort.html
@@ -2,7 +2,7 @@
 function gc(){
 var buffer=[];
 for(var i=0;i<0x100000;i++){
-buffer[i]=new ArrayBuffer(0x100);
+buffer[i]=new Array(0x1);
 }
 }
 var a,b,c;
