--- a/webkit2.html
+++ b/webkit2.html
@@ -1,4 +1,5 @@
 <script>
+    alert("start");
 (function (x = 0) {
     var a;
     {
@@ -14,4 +15,5 @@
         g();
     }
 }());
+    alert("end");
 </script>
