Update and rename webk3.html to web3.html

--- a/web3.html
+++ b/web3.html
@@ -44,4 +44,4 @@ function eventhandler1() {
 <output id="o">foo</output>
 <video id="v"></video>
 <svg>
-<text onload="eventhandler1()" />
+<text onload=eventhandler1() />
