--- a/string_no_crach.html
+++ b/string_no_crach.html
@@ -1,3 +1,4 @@
+
 <script>
 alert("start");
 function neuter(ab) {
@@ -45,6 +46,7 @@ function myfunc(){
 //alert("to trigger");
 gc();
 eval("x.replace(/\\d/g, y)");
+alert(y);
 alert("end");
 }
 setTimeout(myfunc,6000);
