--- a/arb_read.html
+++ b/arb_read.html
@@ -57,7 +57,7 @@ function myfunc(){
 //alert("to trigger");
 gc();
 eval("x.replace(/\\d/g, y)");
-alert(mystr2.charCodeAt(0).toString(16));
+//alert(mystr2.charCodeAt(0).toString(16));
 alert("end");
 }
 setTimeout(myfunc,6000);
