--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>
-alert("start");
+alert("start_to_read");
 var array=new Array(0x4000);
 function neuter(ab) {
     postMessage("", "*", [ab]);
