--- a/arb_read.html
+++ b/arb_read.html
@@ -1,9 +1,10 @@
 <script>
-alert("start_to_read3");
+alert("start");
 var array=new Array(0x4000);
 function neuter(ab) {
     postMessage("", "*", [ab]);
 }
+    /*
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -62,4 +63,5 @@ alert(mystr2.charCodeAt(0).toString(16));
 alert("end");
 }
 setTimeout(myfunc,6000);
+    */
 </script>
