--- a/string_no_crach.html
+++ b/string_no_crach.html
@@ -32,7 +32,7 @@ var mystr=createStringWithRepeatedChar("M",(1 << 16) );
 y = createStringWithRepeatedChar(y,(1 << 16) );
 x = createStringWithRepeatedChar(x, 1 << 16);
 x+="1";
-y=tmy+y.substring(0,y.length-0x50);
+y=tmpy+y.substring(0,y.length-0x50);
 x.substring(0,5);
 mystr.substring(0,5);
 y.substring(0,5);
