--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start6");
+alert("start1");
 
 function neuter(ab) {
 
@@ -12,15 +12,11 @@ function gc() {
 
     try {
 
-        var c = document.createElement("canvas");
-
-        var gl = c.getContext("2d");
-
 
 
         for (var i = 0; i < 0x1000; i++) {
 
-            var gggg = gl.createImageData(1, 0x200)
+            var gggg = new Array(0x100)
 
         }
 
