--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start1");
+alert("start2");
 
 function neuter(ab) {
 
@@ -60,7 +60,7 @@ x = createStringWithRepeatedChar(x, 1 << 16);
 
 x+="1";
 
-y=tmpy+y.substring(0,y.length-0x50);
+//y=tmpy+y.substring(0,y.length-0x50);
 
 x.substring(0,5);
 
