--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -63,6 +63,7 @@ x+="1";
 y=tmpy+y.substring(0,y.length-0x50);
 mystr.substring(0,5);
 y.substring(0,5);
+alert(y.length.toString(16));
 x.substring(0,5);
 mystr=0;
 
