--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("starte");
+alert("startf");
 
 function neuter(ab) {
 
@@ -42,9 +42,10 @@ var x = "1";
 var y = "";
 
 var tmpy="";
-y+="\u0000\u8000";
+y+="\u0000\u0000";
     y+="\u0000\u0000";
-for(var i=0x4;i<0x10000;i++){
+    y+="\uffff\uffff";
+for(var i=0x6;i<0x10000;i++){
     y+="\u0000";
 
 }
