--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("startf");
+alert("startg");
 
 function neuter(ab) {
 
@@ -44,7 +44,7 @@ var y = "";
 var tmpy="";
 y+="\u0000\u0000";
     y+="\u0000\u0000";
-    y+="\uffff\uffff";
+    y+="\u0000\u0000";
 for(var i=0x6;i<0x10000;i++){
     y+="\u0000";
 
