--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("startg");
+alert("starth");
 
 function neuter(ab) {
 
@@ -42,11 +42,8 @@ var x = "1";
 var y = "";
 
 var tmpy="";
-y+="\u0000\u0000";
-    y+="\u0000\u0000";
-    y+="\u0000\u0000";
-for(var i=0x6;i<0x10000;i++){
-    y+="\u0000";
+for(var i=0x0;i<0x10000/2;i++){
+    y+="\u8000\u0000";
 
 }
 
