--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("starth");
+alert("starta");
 
 function neuter(ab) {
 
@@ -43,7 +43,7 @@ var y = "";
 
 var tmpy="";
 for(var i=0x0;i<0x10000/2;i++){
-    y+="\u8000\u0000";
+    y+="\u0080\u0000";
 
 }
 
