--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,7 +1,8 @@
 <script>
 
 alert("starta");
-
+var aaa="abc";
+alert(aaa.charCodeAt(0).toString(16));
 function neuter(ab) {
 
     postMessage("", "*", [ab]);
