--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("startbb");
+alert("startcc");
 function neuter(ab) {
 
     postMessage("", "*", [ab]);
@@ -42,7 +42,7 @@ var y = "";
 
 var tmpy="";
 for(var i=0x0;i<0x10000/2;i++){
-    if(i==0x28){
+    if(i==0x500){
     y+="\u8080\u8080";
     }else{
     y+="\u0000\u0000";
