--- a/string_info.html
+++ b/string_info.html
@@ -1,5 +1,5 @@
 <script>
-alert("start");
+alert("start1");
 function gc() {
 
     try {
@@ -7,7 +7,7 @@ function gc() {
 
 
 
-        for (var i = 0; i < 0x2000; i++) {
+        for (var i = 0; i < 0x200; i++) {
 
             d[i].substring(0,5);
 
@@ -37,10 +37,10 @@ gc();
 }
 var a,b,c,d;
 a=new Array(0x2);
-b=createStringWithRepeatedChar("1",0x100);
+b=createStringWithRepeatedChar("1",0x10000);
 d=new Array(0x2000);
 for(var i=0;i<d.length;i++){
-d[i]=createStringWithRepeatedChar("2",0x100);
+d[i]=createStringWithRepeatedChar("2",0x10000);
 }
 b.substring(0,5);
 c=new Object();
