--- a/string_no_crash.html
+++ b/string_no_crash.html
@@ -1,6 +1,6 @@
 <script>
 
-alert("start4");
+alert("start5");
 function neuter(ab) {
 
     postMessage("", "*", [ab]);
@@ -41,11 +41,11 @@ var x = "1";
 var y = "";
 
 var tmpy="";
-for(var i=0x0;i<0x10000/2;i++){
+for(var i=0x0;i<0x10000;i++){
     if(i==0x500){
-    y+="\u0000\u0000";
+    y+="\u0000";
     }else{
-    y+="\u0000\u0000";
+    y+="\u0000";
     }
 }
 
