--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with spray");
+alert("start with spray1");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -43,9 +43,12 @@ arr[i] = c.fontsize(1);
 }
 var s1 = c.fontsize(1) ;
 x.replace(/\d/g, s1);
-var spray=new Array(0x200);
+var spray=new Array(0x2000);
 for(var i=0;i<spray.length;i++){
- spray[i]=new Array(0x1000);   
+ spray[i]=new Array(0x1000); 
+    for(var j=0;j<spray[i].length;j++){
+     spray[i][j]=0xAAAA;   
+    }
 }
 alert("ok");
 
