--- a/arb_read.html
+++ b/arb_read.html
@@ -55,10 +55,14 @@ try{
     alert(2)
     for (var i=0; i<0x1000; i++) {
         spray[i] = new Array(cnt);
+    }
+alert(3)
+    for (var i=0; i<0x1000; i++) {
         for (var j=0; j<cnt; j++) {
             spray[i][j] = 0x666
         }
     }
+    
     alert('ok2');
 
 
