--- a/arb_read.html
+++ b/arb_read.html
@@ -1,7 +1,7 @@
 <script>	
 alert("start with uint8 value:0xA8A");
         //var s_size = 0x10000;
-        var v1 = [1,2,3]
+        var v1 = new Uint8Array(0x1);
         var v2 = 0x666
     var cnt = 0x1e00//(s_size-0x14)/8;
     //alert(1)
