--- a/arb_read.html
+++ b/arb_read.html
@@ -1,13 +1,13 @@
 <script>	
-alert("start with uint8 value:0xA10A");
+alert("start with uint8 value:0xA11A");
         //var s_size = 0x10000;
         var v1 = new Uint8Array(0x7);
-        v[0] = 0xaa
-        v[1] = 0xbb
-        v[2] = 0xcc
-        v[3] = 5
-        v[4] = 6
-        v[5] = 7
+        v1[0] = 0xaa
+        v1[1] = 0xbb
+        v1[2] = 0xcc
+        v1[3] = 5
+        v1[4] = 6
+        v1[5] = 7
         var v2 = 0x666
     var cnt = 0x1e00//(s_size-0x14)/8;
     //alert(1)
