--- a/array.html
+++ b/array.html
@@ -32,7 +32,7 @@ c += c;
 }
 var d="\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u7000\u0000\u7000\u0000\u0000\u0000\u0000\u0000"+
-      "\u0000\uBBBB\u0000\uFFFF\uFFFF\u0000\u0000\u0000"+
+      "\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\u0000"+
       "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u0000\u0000\u8000\u0000\u0000\u0000\u0000\u0000";
