--- a/array.html
+++ b/array.html
@@ -63,5 +63,39 @@ arrcvs[j]=0xAAAA;
 x.replace(/\d/g, s1);
 alert("ok");
 alert(arrcvs[0].toString(16));
+var spray=new (0x800);
+for(var i=0;i<spray.length;i++){
+ spray[i]=new Array(0x1e00);
+ for(var j=0;j<0x1e00;j+=2){
+  spray[i][j]==arrcvs;
+  spray[i][j+1]=0x6666;
+ }
+}
+var a=0;
+var b="";
+while(1){
+a=prompt("addr");
+b="";
+if(a==0){
+ break;   
+}
+a=a/2;
+b+=s1.charCodeAt(a).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+1).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+2).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+3).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+4).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+5).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+6).toString(16);
+b+=" ";
+b+=s1.charCodeAt(a+7).toString(16);      
+alert(b);
+}
 alert("end");
 </script>
