--- a/array.html
+++ b/array.html
@@ -67,7 +67,7 @@ var spray=new (0x800);
 for(var i=0;i<spray.length;i++){
  spray[i]=new Array(0x1e00);
  for(var j=0;j<0x1e00;j+=2){
-  spray[i][j]==arrcvs;
+  spray[i][j]=arrcvs;
   spray[i][j+1]=0x6666;
  }
 }
