--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start5");
+alert("start6");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -68,9 +68,7 @@ for(var i=0;i<spray.length;i+=2){
  spray[i]=new Array(0x1e00);
  spray[i+1]=new Uint32Array(0x10000/4);
  for(var j=0;j<0x10000/4;j++){
-     if(j%4==0){
-     spray[i+1][j]=j<<12+i;
-     }
+     spray[i+1][j]=i;
  }
  for(var j=0;j<0x1e00;j+=2){
   spray[i][j]=arrcvs;
