--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start8");
+alert("start9");
 function gc() {
     try {
         var c = document.createElement("canvas");
@@ -62,15 +62,15 @@ arrcvs[j]=0xAAAA;
 //arrcvs.sort();
 x.replace(/\d/g, s1);
 alert("ok");
-alert(arrcvs[0].toString(16));
-var spray=new Array(0x600);
+//alert(arrcvs[0].toString(16));
+var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
  spray[i]=new Array(0x1e00);
  spray[i+1]=new Uint32Array(0x10000/4);
   tmp=spray[i+1];
  for(var j=0;j<0x10000/4;j++){
-     tmp[j]=i;
+     tmp[j]=j<<12+i;
  }
      tmp=spray[i];
  for(var j=0;j<0x1e00;j+=2){
