--- a/array.html
+++ b/array.html
@@ -69,10 +69,8 @@ var tmp;
  spray[i]=new Array(0x1e00);
  spray[i+1]=new Uint32Array(0x10000/4);
   tmp=spray[i+1];
- for(var j=0;j<0x10000/4;j++){
-     tmp[j]=j<<12+i;
- }
-     tmp=spray[i];
+  tmp[0]=i;
+  tmp=spray[i];
  for(var j=0;j<0x1e00;j+=2){
   tmp[j]=arrcvs;
   tmp[j+1]=i;
