--- a/array.html
+++ b/array.html
@@ -1,11 +1,14 @@
 <script>	
-alert("start11");
+alert("start12");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
  spray[i]=new Array(0x1e00);
  spray[i+1]=new Uint32Array(0x10000/4);
   tmp=spray[i+1];
+  for(var j=0;j<0x10000/4;j++){
+   tmp[j]=j<<12+i;
+  }
   tmp[0]=i+1;
   tmp=spray[i];
  for(var j=0;j<0x1e00;j+=2){
