--- a/array.html
+++ b/array.html
@@ -1,13 +1,14 @@
 <script>	
-alert("start14");
+alert("start15");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
  spray[i]=new Array(0x1e00);
  spray[i+1]=new Uint32Array(0x10000/4);
   tmp=spray[i+1];
-  for(var j=0;j<0x10000/4;j++){
-   tmp[j]=i;//(j<<12)+i;
+  for(var j=0;j<0x10000/4;j+=2){
+   tmp[j]=i+0xAA000000;//(j<<12)+i;
+   tmp[j+1]=j+0xBB000000;
   }
   tmp[0]=i+1;
   tmp=spray[i];
